# QT-L-re

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  main.qml  main.ui.qml  markdown.md  server.py
